--- a/src/base-templates/CQRSLAPP/src/BAYSOFT/BAYSOFT.csproj
+++ b/src/base-templates/CQRSLAPP/src/BAYSOFT/BAYSOFT.csproj
@@ -12,11 +12,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Core\Domain\Validations\EntityValidations\" />
-    <Folder Include="Core\Domain\Validations\Specifications\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Include="wwwroot\lib\fontawesome\js\all.js" />
     <None Include="wwwroot\lib\fontawesome\js\all.min.js" />
     <None Include="wwwroot\lib\fontawesome\js\brands.js" />
@@ -1674,6 +1669,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="9.0.1" />
     <PackageReference Include="MediatR" Version="8.0.2" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
@@ -1684,6 +1680,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
     <PackageReference Include="ModelWrapper" Version="2.1.0" />
+    <PackageReference Include="NetDevPack" Version="1.1.0" />
   </ItemGroup>
 
 </Project>
